# doteur

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENCE.MD  README.md  build.sh  foo  hello  hello.dot  install.sh  output.dot  release.sh  uninstall.sh
.github/: ci.yml
.github/hooks/: pre-commit
.github/logic_flow/: logic.dot
.github/workflows/: ci.yml  jekyll-docker.yml
docs/: 404.html  LICENCE.md  README.md  _config.yml  changelog.html  changelog.md  download.md  downloads.html  features.html  features.md  feed.xml  feedback.html  feedback.md  index.html  index.md  license.html  mynew.html  robots.txt  sample.html  sitemap.xml  usage.html  usage.md
docs/assets/: download.sh
docs/assets/css/: just-the-docs-dark.css  just-the-docs-default.css  just-the-docs-light.css
docs/assets/js/: just-the-docs.js  search-data.json
docs/install/: cargo.html  cargo.md  docker.html  index.html  index.md  linux.html  linux.md  windows.html  windows.md
docs/live/: iframe.html  index.html  index.md
docs/live/example/pkg/: doteur_wasm_bg.wasm  index.html  package.json
docs/live/pkg/: README.md  doteur_wasm.js  doteur_wasm_bg.wasm  index.html  package.json
docs_src/: Gemfile  LICENCE.md  _config.yml  changelog.md  download.md  feedback.md  index.md  usage.md
docs_src/install/: cargo.md  docker.md  linux.md  windows.md
docs_src/live/: index.html  index.md
docs_src/live/example/: index.html
doteur_cli/: Cargo.toml
doteur_cli/src/: args.rs  errors.rs  main.rs
doteur_core/: Cargo.toml
doteur_core/src/: add_traits.rs  errors.rs  lib.rs  mysql_tools.rs  restriction.rs  sqlite_tools.rs  tools.rs
doteur_core/src/dot_structs/: attribute.rs  dot_file.rs  dot_table.rs  mod.rs  relation.rs
doteur_core_refact/: Cargo.toml
doteur_core_refact/src/: lib.rs
doteur_core_refact/src/sql_parser/: keyword_error.rs  mod.rs
doteur_mysql/: Cargo.toml
doteur_mysql/src/: lib.rs
doteur_sqlite/: Cargo.toml
doteur_sqlite/src/: lib.rs
doteur_wasm/: Cargo.toml  Trunk.toml  index.html  main.css  package.json  push_to_pages.sh  tailwind.config.js
doteur_wasm/example/: iframe.html  index.html  sample.sql
doteur_wasm/src/: codemirror.rs  graphviz.rs  lib.rs  main.rs
examples/: samplefile3.sql
samples/: sample_mysql_file2.sql  sample_sqlite_file1.sqlite  samplefile1.sql  samplefile2.sql  samplefile3.sql
src/: add_trait.rs  args.rs  cli.yml  lib.rs  main.rs  mod.rs  models.rs  mysql_tools.rs  output.dot  regex_tools.rs  restriction.rs  sqlite_tools.rs
src/dot_structs/: dot_file.rs  mod.rs  relation.rs
src/models/: add_traits.rs  args.rs  mod.rs  restriction.rs
src/models/dot_structs/: attribute.rs  dot_file.rs  dot_table.rs  mod.rs
