[package]
name = "doteur"
version = "0.3.2"
authors = ["nag763 <loic.labeye@tutanota.de>"]
edition = "2018"
license-file = "LICENCE.MD"
homepage = "https://doteur.net"
description = "Tool to automate the visualisation of UML dependencies from a SQL file"
repository = "https://github.com/nag763/doteur/"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
clap = { version = "2.3.3", features = ["yaml"] }
lazy_static = "1.4.0"
which = "4.1.0"
