[package]
name = "doteur"
version = "0.4.0"
authors = ["nag763 <loic.labeye@tutanota.de>"]
edition = "2018"
license = "MIT"
homepage = "https://doteur.net"
description = "Tool to automate the visualisation of UML dependencies from a SQL file"
repository = "https://github.com/nag763/doteur/"
readme = "README.md"
exclude = [
    "release/*",
    ".github/*",
    "target/*",
    "*.sh",
    "samples/",
    "Dockerfile",

]

[dependencies]
regex = "1"
clap = { version = "2.3.3", features = ["yaml"] }
lazy_static = "1.4.0"
which = "4.1.0"
log = "0.4.14"
env_logger = "0.9.0"
itertools = "0.10.3"
mysql = "21.0.2"
dialoguer = "0.9.0"
