[package]
name = "doteur"
version = "0.4.1"
authors = ["nag763 <loic.labeye@tutanota.de>"]
edition = "2018"
license = "MIT"
homepage = "https://doteur.net"
description = "Tool to automate the visualisation of UML dependencies from a SQL file"
repository = "https://github.com/nag763/doteur/"
readme = "README.md"
categories = ["command-line-utilities", "rendering", "visualization"]
keywords = ["cli", "mysql", "dot"] 
exclude = [
    "release/*",
    ".github/*",
    "target/*",
    "*.sh",
    "samples/",
    "Dockerfile",
]

[dependencies]
doteur_core = { path = "../doteur_core" }
doteur_sqlite = { path = "../doteur_sqlite", optional=true }
doteur_mysql = { path = "../doteur_mysql", optional=true }
cfg-if = "1.0.0"
which = "4.1.0"
clap = { version = "3.0.3" }
env_logger = "0.9.0"
mysql = { version="21.0.2", optional=true}
dialoguer = { version="0.9.0", optional=true}
rusqlite = { version="0.26.3", optional=true}

[features]
mysql_addons = ["mysql", "dialoguer", "doteur_mysql"]
sqlite_addons = ["rusqlite", "doteur_sqlite"]
