[package]
name = "doteur"
version = "0.5.0"
authors = ["nag763 <loic.labeye@tutanota.de>"]
edition = "2018"
license = "MIT"
homepage = "https://doteur.net"
description = "Tool to automate the visualisation of UML dependencies from a SQL file"
repository = "https://github.com/nag763/doteur/"
readme = "README.md"
categories = ["command-line-utilities", "rendering", "visualization"]
keywords = ["cli", "mysql", "dot"]
exclude = [
    "release/*",
    ".github/*",
    "target/*",
    "*.sh",
    "samples/",
    "Dockerfile",
]

[dependencies]
doteur_core = { path = "../doteur_core", default-features = false }
cfg-if = "1.0.0"
which = "4.1.0"
clap = { version = "3.0.3", features = ["derive"] }
env_logger = "0.9.0"
dialoguer = { version="0.9.0", optional=true}

[features]
mysql_addons = ["dialoguer", "doteur_core/mysql_addons"]
sqlite_addons = ["doteur_core/sqlite_addons"]
