[package]
name = "doteur"
version = "0.5.7"
authors = ["nag763 <loic.labeye@tutanota.de>"]
edition = "2018"
license = "MIT"
homepage = "https://nag763.github.io/doteur"
description = "Tool to automate the visualisation of UML dependencies from a SQL input"
repository = "https://github.com/nag763/doteur/"
readme = "../README.md"
categories = ["command-line-utilities", "rendering", "visualization"]
keywords = ["cli", "mysql", "dot", "sqlite", "graphviz"]
exclude = [
    "release/*",
    ".github/*",
    "target/*",
    "*.sh",
    "samples/",
    "Dockerfile",
]

[dependencies]
doteur_core = { path = "../doteur_core", default-features = false, version="0.5.7" }
cfg-if = "1.0.0"
which = "7.0.0"
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.5"
dialoguer = { version="0.11.0", optional=true}

[features]
mysql_addons = ["dialoguer", "doteur_core/mysql_addons"]
sqlite_addons = ["doteur_core/sqlite_addons"]
