[package]
name = "doteur_core"
version = "0.5.4"
authors = ["nag763 <loic.labeye@tutanota.de>"]
edition = "2018"
license = "MIT"
homepage = "https://nag763.github.io/doteur"
description = "Libraries for doteur"
readme = "../README.md"
repository = "https://github.com/nag763/doteur/"

[dependencies]
regex = "1.10.2"
lazy_static = "1.4.0"
log = "0.4.20"
itertools = "0.12.0"
mysql = { version="24.0.0", optional=true}
rusqlite = { version="0.30.0", optional=true}

[features]
mysql_addons = ["mysql"]
sqlite_addons = ["rusqlite"]
