[package]
name = "doteur_core"
version = "0.5.7"
authors = ["nag763 <loic.labeye@tutanota.de>"]
edition = "2018"
license = "MIT"
homepage = "https://nag763.github.io/doteur"
description = "Libraries for doteur"
readme = "../README.md"
repository = "https://github.com/nag763/doteur/"

[dependencies]
regex = "1.11.1"
lazy_static = "1.5.0"
log = "0.4.26"
itertools = "0.13.0"
mysql = { version="25.0.1", optional=true}
rusqlite = { version="0.32.1", optional=true}

[features]
mysql_addons = ["mysql"]
sqlite_addons = ["rusqlite"]
