[package]
name = "doteur_wasm"
version = "0.2.0"
edition = "2021"
readme = "README.md"


[dependencies]
doteur_core = { path = "../doteur_core", default-features = false, version="0.5.6" }
gloo-console = "0.3.0"
leptos = { version = "0.6.14", features = ["csr"] }
leptos-use = "0.13.0"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
web-sys = "0.3.70"
