[package]
name = "doteur_wasm"
version = "0.2.0"
edition = "2021"
readme = "README.md"


[dependencies]
doteur_core = { path = "../doteur_core", default-features = false, version="0.5.7" }
gloo-console = "0.3.0"
leptos = { version = "0.6.15", features = ["csr"] }
leptos-use = "0.13.11"
wasm-bindgen = "0.2.97"
wasm-bindgen-futures = "0.4.47"
web-sys = "0.3.74"
